--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <Button
         android:id="@+id/myButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click aqui"
-        android:layout_centerInParent="true"/>
-
+        android:layout_centerInParent="true"
+        android:text="Click aqui" />
 
     <TextView
         android:layout_width="wrap_content"
