--- a/Ejercicios/Calculadora/app/src/main/res/layout/activity_main.xml
+++ b/Ejercicios/Calculadora/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:background="@android:color/transparent"
         android:cursorVisible="false"
         android:focusable="false"
-        android:gravity="end"
+        android:gravity="end|center_vertical"
         android:hint="0"
         android:inputType="numberDecimal"
         android:textColor="#ff0000"
